// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes should render "/" page 1`] = `
<DocumentFragment>
  <div>
    movies-page
  </div>
</DocumentFragment>
`;

exports[`routes should render "/about" page 1`] = `
<DocumentFragment>
  <div>
    about-page
  </div>
</DocumentFragment>
`;

exports[`routes should render "/favourites" page 1`] = `
<DocumentFragment>
  <div>
    favourites-page
  </div>
</DocumentFragment>
`;
